==> dpalchak/estoppel/third_party/st/stm32l4_sdk/v1.12.0/Projects/STM32L476G-EVAL/Examples/SMARTCARD/SMARTCARD_T0/Src/smartcard.c <==
#include "smartcard.h"

void SC_PowerCmd(FunctionalState NewState)
{
  /* CMDVCC active low */
  if(NewState != DISABLE)
  {
    BSP_IO_WritePin(SC_CMDVCC_PIN, 0); /* ON */
  }
  else
  {
    BSP_IO_WritePin(SC_CMDVCC_PIN, 1); /* OFF */
  } 
}

void SC_Reset(IO_PinState ResetState)
{
  /* RST active high */
  BSP_IO_WritePin(SC_RESET_PIN, ResetState);
}

void SC_PTSConfig(void)
{
  uint32_t workingbaudrate = 0, apbclock = 0;
  uint8_t locData = 0, PPSConfirmStatus = 1;
  uint8_t SC_PPSS[4] = {0};

  /* Reconfigure the USART Baud Rate -----------------------------------------*/
  apbclock = HAL_RCC_GetPCLK1Freq();
  apbclock /= ((SC_USART->GTPR & (uint16_t)0x00FF) * 2);

  if((SC_A2R.T0 & (uint8_t)0x10) == 0x10)
  {
    if(SC_A2R.T[0] != 0x11)
    {
      /* PPSS identifies the PPS request or responce and is equal to 0xFF */
      SC_PPSS[0] = 0xFF;
      /* PPS0 indicates by the bits b5, b6, b7 equal to 1 the presence of the optional
      bytes PPSI1, PPS2, PPS3 respectively */
      SC_PPSS[1] = 0x10;   /* only send PPS1 */
      /* PPS1 allows the interface device to propose value of F and D to the card */
      SC_PPSS[2] = SC_A2R.T[0]; 
      /* PCK check character */ 
      SC_PPSS[3] = (uint8_t)0xFF^(uint8_t)0x10^(uint8_t)SC_A2R.T[0];      

      if(HAL_SMARTCARD_Transmit(&SCHandle, (uint8_t *)SC_PPSS, 4, SC_TRANSMIT_TIMEOUT) != HAL_OK)
      {
         Error_Handler();
      }
      
      /* PPSS response = PPSS request = 0xFF*/
      if(HAL_SMARTCARD_Receive(&SCHandle, (uint8_t *)&locData, 1, SC_RECEIVE_TIMEOUT) == HAL_OK)  
      {
        if(locData != 0xFF)
        {
          /*PPSS exchange unsuccessful */
          PPSConfirmStatus = 0x00;
        }
        
        /*PPS0 response */
        if(HAL_SMARTCARD_Receive(&SCHandle, (uint8_t *)&locData, 1, SC_RECEIVE_TIMEOUT) == HAL_OK)  
        {
          if(locData != 0x10)
          {
            /*PPS0 exchange unsuccessful */
            PPSConfirmStatus = 0x00;
          }
        }
        else
        {
          Error_Handler();
        }
        /*PPS1 response */
        if(HAL_SMARTCARD_Receive(&SCHandle, (uint8_t *)&locData, 1, SC_RECEIVE_TIMEOUT) == HAL_OK)
        {
          if(locData != SC_A2R.T[0])
          {
            /*PPS1 exchange unsuccessful */
            PPSConfirmStatus = 0x00;
          }
        }
        else
        {
          Error_Handler();
        }
        /*PCK response */
        if(HAL_SMARTCARD_Receive(&SCHandle, (uint8_t *)&locData, 1, SC_RECEIVE_TIMEOUT) == HAL_OK)
        {
          if(locData != ((uint8_t)0xFF^(uint8_t)0x10^(uint8_t)SC_A2R.T[0]))
          {
            /*PCK exchange unsuccessful */
            PPSConfirmStatus = 0x00;
          }
        }
        else
        {
          Error_Handler();
        }
      }
      else
      {
        /*PPSS exchange unsuccessful */
        PPSConfirmStatus = 0x00;
      }

      /* PPS exchange successful */
      if(PPSConfirmStatus == 0x01)
      {
        workingbaudrate = apbclock * D_Table[(SC_A2R.T[0] & (uint8_t)0x0F)];
        workingbaudrate /= F_Table[((SC_A2R.T[0] >> 4) & (uint8_t)0x0F)];

        SCHandle.Instance = SC_USART;
        SCHandle.Init.BaudRate = workingbaudrate;
        SCHandle.Init.WordLength = SMARTCARD_WORDLENGTH_9B;
        SCHandle.Init.StopBits = SMARTCARD_STOPBITS_1_5;
        SCHandle.Init.Parity = SMARTCARD_PARITY_EVEN;
        SCHandle.Init.Mode = SMARTCARD_MODE_TX_RX;
        SCHandle.Init.CLKPolarity = SMARTCARD_POLARITY_LOW;
        SCHandle.Init.CLKPhase = SMARTCARD_PHASE_1EDGE;
        SCHandle.Init.CLKLastBit = SMARTCARD_LASTBIT_ENABLE;
        SCHandle.Init.Prescaler = 10;
        SCHandle.Init.GuardTime = 0;
        SCHandle.Init.NACKEnable = SMARTCARD_NACK_ENABLE;
        SCHandle.Init.OneBitSampling = SMARTCARD_ONE_BIT_SAMPLE_ENABLE;
        SCHandle.Init.TimeOutEnable = SMARTCARD_TIMEOUT_DISABLE;
        SCHandle.Init.BlockLength = 0;  /* T=1 not applicable */
        SCHandle.Init.AutoRetryCount = 3;        
        SCHandle.AdvancedInit.AdvFeatureInit = SMARTCARD_ADVFEATURE_NO_INIT;
        if(HAL_SMARTCARD_Init(&SCHandle) != HAL_OK)
        {
          Error_Handler();
        }
      }
    }
  }  
}

static void SC_SendData(SC_ADPU_Commands *SC_ADPU, SC_ADPU_Response *SC_ResponseStatus)
{
  uint32_t i = 0;
  uint8_t SC_Command[5] = {0};
  uint8_t locData = 0;
  
  /* Reset responce buffer ---------------------------------------------------*/
  for(i = 0; i < LC_MAX; i++)
  {
    SC_ResponseStatus->Data[i] = 0;
  }
  
  SC_ResponseStatus->SW1 = 0;
  SC_ResponseStatus->SW2 = 0;

  /* Send header -------------------------------------------------------------*/
  SC_Command[0] = SC_ADPU->Header.CLA;
  SC_Command[1] = SC_ADPU->Header.INS;
  SC_Command[2] = SC_ADPU->Header.P1;
  SC_Command[3] = SC_ADPU->Header.P2;
  if(SC_ADPU->Body.LC)
  {
    SC_Command[4] = SC_ADPU->Body.LC;
  }
  else
  {
    SC_Command[4] = SC_ADPU->Body.LE;
  }
  
  if(HAL_SMARTCARD_Transmit(&SCHandle, (uint8_t *)SC_Command, 5, SC_TRANSMIT_TIMEOUT) != HAL_OK)
  {
    Error_Handler();
  }
    
  /* --------------------------------------------------------
    Wait Procedure byte from card:
    1 - ACK
    2 - NULL
    3 - SW1; SW2
   -------------------------------------------------------- */
  if(HAL_SMARTCARD_Receive(&SCHandle, (uint8_t *)&locData, 1, SC_RECEIVE_TIMEOUT) == HAL_OK)
  {
    if(((locData & (uint8_t)0xF0) == 0x60) || ((locData & (uint8_t)0xF0) == 0x90))
    {
      /* SW1 received */
      SC_ResponseStatus->SW1 = locData;

      if(HAL_SMARTCARD_Receive(&SCHandle, (uint8_t *)&locData, 1, SC_RECEIVE_TIMEOUT) == HAL_OK)
      {
        /* SW2 received */
        SC_ResponseStatus->SW2 = locData;
      }
    }
    else if (((locData & (uint8_t)0xFE) == (((uint8_t)~(SC_ADPU->Header.INS)) & \
             (uint8_t)0xFE))||((locData & (uint8_t)0xFE) == (SC_ADPU->Header.INS & (uint8_t)0xFE)))
    {
      SC_ResponseStatus->Data[0] = locData;/* ACK received */
    }
  }
  else
  {
    Error_Handler();
  }

  /* If no status bytes received ---------------------------------------------*/
  if(SC_ResponseStatus->SW1 == 0x00)
  {
    /* Send body data to SC---------------------------------------------------*/
    if (SC_ADPU->Body.LC)
    {
      if(HAL_SMARTCARD_Transmit(&SCHandle, (uint8_t *)SC_ADPU->Body.Data, SC_ADPU->Body.LC, SC_TRANSMIT_TIMEOUT) != HAL_OK)
      {
        Error_Handler();
      }
    }

    /* Or receive body data from SC ------------------------------------------*/
    else if (SC_ADPU->Body.LE)
    {
      for(i = 0; i < SC_ADPU->Body.LE; i++)
      {
        if(HAL_SMARTCARD_Receive(&SCHandle, (uint8_t *)&locData, 1, SC_RECEIVE_TIMEOUT) == HAL_OK)         
        {
          SC_ResponseStatus->Data[i] = locData;
        }
        else
        {
          Error_Handler();
        }
      }
    }
    /* Wait SW1 --------------------------------------------------------------*/
    if(HAL_SMARTCARD_Receive(&SCHandle, (uint8_t *)&locData, 1, SC_RECEIVE_TIMEOUT) == HAL_OK)  
    {
      SC_ResponseStatus->SW1 = locData;
    }
    else
    {
      Error_Handler();
    }
    /* Wait SW2 --------------------------------------------------------------*/
    if(HAL_SMARTCARD_Receive(&SCHandle, (uint8_t *)&locData, 1, SC_RECEIVE_TIMEOUT) == HAL_OK)
    {
      SC_ResponseStatus->SW2 = locData;
    }
    else
    {
      Error_Handler();
    }
  }
}

static void SC_Init(void)
{
  /* SC_USART configuration --------------------------------------------------*/
  /* SC_USART configured as follow:
  - Word Length = 9 Bits
  - 1.5 Stop Bit
  - Even parity
  - BaudRate = 8064 baud
  - Hardware flow control disabled (RTS and CTS signals)
  - Tx and Rx enabled
  - USART Clock enabled
  */
  /* USART Clock set to 4 MHz (PCLK1 (80 MHz) / 20) => prescaler set to 10 */
  SCHandle.Instance = SC_USART;
  SCHandle.Init.BaudRate = 10752;  /* Starting baudrate = 4MHz / 372etu */
  SCHandle.Init.WordLength = SMARTCARD_WORDLENGTH_9B;  /* 8-bits data + parity bit */
  SCHandle.Init.StopBits = SMARTCARD_STOPBITS_1_5;
  SCHandle.Init.Parity = SMARTCARD_PARITY_EVEN;
  SCHandle.Init.Mode = SMARTCARD_MODE_TX_RX;
  SCHandle.Init.CLKPolarity = SMARTCARD_POLARITY_LOW;
  SCHandle.Init.CLKPhase = SMARTCARD_PHASE_1EDGE;
  SCHandle.Init.CLKLastBit = SMARTCARD_LASTBIT_ENABLE;  
  SCHandle.Init.Prescaler = 10;
  SCHandle.Init.GuardTime = 0;
  SCHandle.Init.NACKEnable = SMARTCARD_NACK_ENABLE; 
  SCHandle.Init.OneBitSampling = SMARTCARD_ONE_BIT_SAMPLE_DISABLE;
  SCHandle.Init.TimeOutEnable = SMARTCARD_TIMEOUT_DISABLE;
  SCHandle.Init.BlockLength = 0;  /* T=1 not applicable */
  SCHandle.Init.AutoRetryCount = 3;     
  SCHandle.AdvancedInit.AdvFeatureInit = SMARTCARD_ADVFEATURE_NO_INIT;
  
  if(HAL_SMARTCARD_Init(&SCHandle) != HAL_OK)
  {
    Error_Handler();
  }

  /* Set RSTIN LOW */  
  SC_Reset(IO_PIN_RESET);

  /* Select 5V */ 
  SC_VoltageConfig(SC_VOLTAGE_5V);
  
  /* Enable CMDVCC */
  SC_PowerCmd(ENABLE);
}

static void SC_VoltageConfig(uint32_t SC_Voltage)
{
  if(SC_Voltage == SC_VOLTAGE_5V)
  {
    /* Select Smartcard 5V */
    BSP_IO_WritePin(SC_3_5V_PIN, IO_PIN_SET);
  }
  else
  {
    /* Select Smartcard 3V */
    BSP_IO_WritePin(SC_3_5V_PIN, IO_PIN_RESET);
  } 
}

void SC_IOConfig(void)
{
  /* Configure BSP IO */
  BSP_IO_Init();
  
  /* Configure Smartcard OFF presence pin */
  BSP_IO_ConfigPin(SC_OFF_PIN, IO_MODE_IT_FALLING_EDGE);
  /* Configure Smartcard 3/5V pin */
  BSP_IO_ConfigPin(SC_3_5V_PIN, IO_MODE_OUTPUT);
  /* Configure Smartcard CMDVCC pin */
  BSP_IO_ConfigPin(SC_CMDVCC_PIN, IO_MODE_OUTPUT);
  /* Configure Smartcard RESET pin */
  BSP_IO_ConfigPin(SC_RESET_PIN, IO_MODE_OUTPUT);
}

uint32_t SC_Detect(void)
{
  return BSP_IO_ReadPin(SC_OFF_PIN);
}
